package Practica4_DiferenciaComposicionHerencia.Implementacion_alternativa_animal;

abstract public class Animal {
    abstract public void greeting();
}

