package Practica4_DiferenciaComposicionHerencia.Implementacion_alternativa_animal;

public class Cat extends Animal {
    @Override
    public void greeting() {
        System.out.println("Meow!");
    }
}