package Practica4_DiferenciaComposicionHerencia.Implementacion_alternativa_animal;

public class Dog extends Animal {
    @Override
    public void greeting() {
        System.out.println("Woof!");
    }

    public void greeting(Dog another) {
        System.out.println("Woooooooooof!");
    }
}