@startuml

abstract class Animal {
    {abstract} +greeting() : void
}

class Cat {
    +greeting() : void
}

class Dog {
    +greeting() : void
    +greeting(another : Dog) : void
}

class BigDog {
    +greeting() : void
    +greeting(another : Dog) : void
}

Animal <|-- Cat
Animal <|-- Dog
Dog <|-- BigDog

@enduml